# dev_container_cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bash
.devcontainer/: Dockerfile  README.md  devcontainer.json
HelloWorld/: CMakeLists.txt
HelloWorld/src/: main.cpp
